<resources>
    <string name="app_name">VirtualJukebox</string>
    <string name="serverIP">server IP address</string>
    <string name="connect">connect</string>
    <string name="username">username</string>
    <string name="title">title</string>
    <string name="artist">artist</string>
    <string name="votes">votes</string>
    <string name="search">search</string>
    <string name="playlist">playlist</string>
    <string name="settings">settings</string>
    <string name="add">add</string>
    <string name="imgLogoDescr">Virtual Jukebox logo</string>
    <string name="imgAlbumcoverDescr">Virtual Jukebox logo</string>
    <string name="addServer">Add Server</string>
</resources>
