<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linSonginfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/txvTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="@string/title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txvArtist"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:text="@string/artist"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/txvVotes"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="@string/votes"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txvUsername"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:text="@string/username"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgCover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:contentDescription="@string/imgAlbumcoverDescr"
            tools:srcCompat="@tools:sample/avatars[3]" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/barPlaytime"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/listPlaylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20" />

    <LinearLayout
        android:id="@+id/linButtonbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="55"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPlaylist"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/playlist" />

        <Button
            android:id="@+id/btnSearch"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/search" />

        <Button
            android:id="@+id/btnSettings"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/settings" />
    </LinearLayout>

</LinearLayout>