<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    android:id="@+id/linSonginfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="50"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/txvTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txvArtist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:text="@string/artist"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnUpvote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="17"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="17"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txvVotes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:text="@string/votes"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txvUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:text="@string/username"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnDownvote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_weight="17"
        app:srcCompat="@android:drawable/arrow_down_float" />

</LinearLayout>